<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hospitals"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_hospitals" />

    <item
        android:id="@+id/navigation_doctors"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_doctors"/>

    <item
        android:id="@+id/navigation_Laps"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_Laps"
        />

    <item
        android:id="@+id/navigation_appointments"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_appointments"
        />

</menu>