<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_radius"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/linearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_end_color"
            android:padding="10dp">

            <TextView
                android:id="@+id/hoste_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@+id/circleView"/>

            <TextView
                android:id="@+id/tv_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/date_hint"
                android:layout_below="@+id/hoste_name"/>
            <TextView
                android:id="@+id/tv_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/work_place"
                android:layout_below="@+id/tv_special"/>

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/edit"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_special"/>

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/delete"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>