<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_card">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_radius"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:padding="10dp">
                <TextView
                    android:id="@+id/patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/patient_lable"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/symptoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    android:text="@string/symptoms_lable"
                    android:layout_below="@+id/patient_name"
                    android:textColor="@color/colorPrimary"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/linearL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/tv_symptoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    android:text="@string/symptoms"
                    android:layout_below="@+id/tv_patient_name"/>
            </RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>